--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,13 +6,25 @@ theme:
     - navigation.tabs
 extra_css:
   - stylesheets/extra.css
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
 nav:
   - Home: index.md
   - Encryption365:
-      - 介绍: encryption365/产品介绍.md
-      - 请求&响应: encryption365/请求和响应.md
-      - 错误请求: encryption365/错误处理.md
-      - 接口认证: encryption365/认证说明.md
-      - 注册设备: encryption365/注册设备.md
-      - 产品列表: encryption365/产品列表.md
-      - 创建证书: encryption365/创建证书.md
+      - 介绍: encryption365/introduction.md
+      - 调用逻辑: encryption365/logic.md
+      - 请求响应: encryption365/request.md
+      - 错误请求: encryption365/error.md
+      - 接口认证: encryption365/authentication.md
+      - 注册设备: encryption365/client/create.md
+      - 产品列表: encryption365/account/products.md
+      - 创建证书: encryption365/order/create.md
+      - 查询证书: encryption365/cert/details.md
+      - 修改验证: encryption365/cert/change_dcv.md
+      - 吊销证书: encryption365/cert/revoke.md
+      - 重启验证: encryption365/cert/challenge.md
